[package]
name = "everusthing"
version = "0.1.0"
edition = "2024"
description = "A Rust reimplementation of Everything 1.4.1.1032"
license = "MIT"

[build-dependencies]
embed-resource = "3.0.11"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_DataExchange",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_Services",
    "Win32_System_Time",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[lib]
name = "everusthing"
path = "src/lib.rs"

[[bin]]
name = "EveRusthing"
path = "src/main.rs"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
